--- a/pepeizqs deals web/Pages/Admin/Humble.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Humble.cshtml
@@ -23,7 +23,7 @@
     {
         usuario = await UserManager.GetUserAsync(User);
 
-        if (global::BaseDatos.Usuarios.Buscar.RolDios(usuario.UserName) == true)
+        if (global::BaseDatos.Usuarios.Buscar.RolDios(usuario.Id) == true)
         {
             adminLogeado = true;
         }
