--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -135,77 +135,78 @@
 
 				@if (deseadosMostrar.Count > 0)
 				{
-					foreach (var juego in deseadosMostrar)
-					{
-						<div style="margin: 20px 0px;">
-							<a class="boton-pequeño" style="padding: 2px;" href="@Herramientas.EnlaceAcortador.Generar(juego.Precio.Enlace, juego.Precio.Tienda)" target="_blank">
-								<div style="display: flex; align-items: center;">
-									<div class="deseado-imagen">
-										<img src="@juego.Imagen" style="height: 100%; width: 100%;" />
-									</div>
+					<Virtualize Context="juego" Items="deseadosMostrar" ItemSize="alturaFila">
+						<ItemContent>
+							<div style="margin: 20px 0px;">
+								<a class="boton-pequeño" style="padding: 2px;" href="@Herramientas.EnlaceAcortador.Generar(juego.Precio.Enlace, juego.Precio.Tienda)" target="_blank">
+									<div style="display: flex; align-items: center;">
+										<div class="deseado-imagen">
+											<img src="@juego.Imagen" style="height: 100%; width: 100%;" />
+										</div>
 
-									<div style="width: 100%; padding: 5px 20px;">
-										<div>@juego.Nombre</div>
+										<div style="width: 100%; padding: 5px 20px;">
+											<div>@juego.Nombre</div>
 
-										<div style="display: flex; align-items: center; margin-top: 5px;">
-											<div style="width: 20px; height: 20px;">
-												<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 100%; height: 100%;" />
-											</div>
+											<div style="display: flex; align-items: center; margin-top: 5px;">
+												<div style="width: 20px; height: 20px;">
+													<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 100%; height: 100%;" />
+												</div>
 
-											@{
-												if (juego.Precio.Precio > 0)
-												{
-													List<Tiendas2.Tienda> tiendas = TiendasCargar.GenerarListado();
-
-													foreach (var tienda in tiendas)
+												@{
+													if (juego.Precio.Precio > 0)
 													{
-														if (tienda.Id == juego.Precio.Tienda)
-														{
-															<div style="width: 20px; height: 20px; margin-left: 10px;">
-																<img src="@tienda.ImagenIcono" style="width: 100%; height: 100%;" />
-															</div>
+														List<Tiendas2.Tienda> tiendas = TiendasCargar.GenerarListado();
 
-															break;
+														foreach (var tienda in tiendas)
+														{
+															if (tienda.Id == juego.Precio.Tienda)
+															{
+																<div style="width: 20px; height: 20px; margin-left: 10px;">
+																	<img src="@tienda.ImagenIcono" style="width: 100%; height: 100%;" />
+																</div>
+
+																break;
+															}
 														}
 													}
 												}
+											</div>
+										</div>
+
+										<div>
+											<div style="display: flex; align-items: center;">
+												<div style="text-align: center; padding: 10px 15px; margin: 0px; min-width: 65px;" class="juego-descuento">
+													@juego.Precio.Descuento.ToString()%
+												</div>
+
+												<div style="padding: 5px 15px; min-width: 110px; text-align: center; font-size: 18px;">
+													@MensajeMinimo(juego.Precio, false)
+												</div>
+											</div>
+
+											@if (juego.Historico == true)
+											{
+												<div style="text-align: center; font-size: 14px; padding: 5px 15px; background-color: var(--fondoAlerta); margin-right: 3px;">
+													@Herramientas.Idiomas.CogerCadena(idioma, "String6", "Wishlist")
+												</div>
+											}
+											else
+											{
+												<div style="text-align: center; font-size: 14px; padding: 5px; background-color: var(--fondoOscuro); margin-right: 3px;">
+													@juego.HistoricoPrecio
+												</div>
 											}
 										</div>
 									</div>
+								</a>
 
-									<div>
-										<div style="display: flex; align-items: center;">
-											<div style="text-align: center; padding: 10px 15px; margin: 0px; min-width: 65px;" class="juego-descuento">
-												@juego.Precio.Descuento.ToString()%
-											</div>
-
-											<div style="padding: 5px 15px; min-width: 110px; text-align: center; font-size: 18px;">
-												@MensajeMinimo(juego.Precio, false)
-											</div>
-										</div>
-
-										@if (juego.Historico == true)
-										{
-											<div style="text-align: center; font-size: 14px; padding: 5px 15px; background-color: var(--fondoAlerta); margin-right: 3px;">
-												@Herramientas.Idiomas.CogerCadena(idioma, "String6", "Wishlist")
-											</div>
-										}
-										else
-										{
-											<div style="text-align: center; font-size: 14px; padding: 5px; background-color: var(--fondoOscuro); margin-right: 3px;">
-												@juego.HistoricoPrecio
-											</div>
-										}
-									</div>
-								</div>
-							</a>
-
-							@if (usuario.WishlistOption2 == true)
-							{
-								<div style="font-size: 14px; margin-top: 5px; text-align: right">@Herramientas.Idiomas.CogerCadena(idioma, "String15", "Wishlist"): @juego.CantidadBundles.ToString() • @Herramientas.Idiomas.CogerCadena(idioma, "String16", "Wishlist"): @juego.CantidadGratis • @Herramientas.Idiomas.CogerCadena(idioma, "String17", "Wishlist"): @juego.CantidadSuscripciones</div>
-							}
-						</div>
-					}
+								@if (usuario.WishlistOption2 == true)
+								{
+									<div style="font-size: 14px; margin-top: 5px; text-align: right">@Herramientas.Idiomas.CogerCadena(idioma, "String15", "Wishlist"): @juego.CantidadBundles.ToString() • @Herramientas.Idiomas.CogerCadena(idioma, "String16", "Wishlist"): @juego.CantidadGratis • @Herramientas.Idiomas.CogerCadena(idioma, "String17", "Wishlist"): @juego.CantidadSuscripciones</div>
+								}
+							</div>
+						</ItemContent>
+					</Virtualize>
 				}
 			</div>
 
