--- a/pepeizqs deals web/Pages/Componentes/Admin/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Bundle.razor
@@ -4,7 +4,7 @@
 
 @if (bundle != null)
 {
-	<div style="padding: 20px; background: var(--fondoCuerpo);">
+	<div style="padding: 20px; background: var(--fondoCuerpo); border: 1px solid var(--fondoBotonPequeño);">
 		<div style="display: flex; align-items: center; margin-bottom: 20px;">
 			<div style="width: 100%;">
 				Admin Editar • @bundle.NombreBundle
