--- a/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
@@ -4,7 +4,7 @@
 @using Newtonsoft.Json
 @using pepeizqs_deals_web.Areas.Identity.Data;
 
-<div style="padding: 20px; background: var(--fondoCuerpo); margin-bottom: 50px;">
+<div style="padding: 20px; background: var(--fondoCuerpo); border: 1px solid var(--fondoBotonPequeño); margin-bottom: 50px;">
 	<div style="display: flex; align-items: center; margin-bottom: 20px;">
 		<div style="width: 100%;">
 			Admin Editar • @juego.Nombre
