--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticia.razor
@@ -3,7 +3,7 @@
 
 @if (noticia != null)
 {
-	<div style="padding: 20px; background: var(--fondoCuerpo); margin-bottom: 40px;">
+	<div style="padding: 20px; background: var(--fondoCuerpo); border: 1px solid var(--fondoBotonPequeño); margin-bottom: 40px;">
 		<div style="display: flex; align-items: center; margin-bottom: 20px;">
 			<div style="width: 100%;">
 				Admin Editar • @noticia.TituloEs
