--- a/pepeizqs deals web/Pages/Account/Rewards.cshtml
+++ b/pepeizqs deals web/Pages/Account/Rewards.cshtml
@@ -24,7 +24,7 @@
         @(await Html.RenderComponentAsync<Componentes.Cuenta.Recompensas>(RenderMode.Server, new
         {
             idioma = Model.idioma,
-            usuario = usuario
+            usuarioId = usuario?.Id
         }))
     }
 }
