--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -111,7 +111,7 @@
 		{
 			idioma = Model.idioma,
 			juego = Model.juego,
-			usuario = usuario,
+			usuarioId = usuario?.Id,
 			userAgent = userAgent
 		}))
 	}
