--- a/pepeizqs deals web/Pages/filter.cshtml
+++ b/pepeizqs deals web/Pages/filter.cshtml
@@ -62,7 +62,7 @@
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Filtro>(RenderMode.Server, new
 		{
 			idioma = Model.idioma,
-			usuario = usuario
+			usuarioId = usuario?.Id
 		}))
 	}
 }
