--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -202,7 +202,7 @@
 
 									if (mostrar == true)
 									{
-										bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
+										bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(juegosUsuario, juego.Juego, juego.DRM);
 										bool usuarioTieneDeseado = false;
 
 										string fondoColor = string.Empty;
@@ -213,7 +213,7 @@
 										}
 										else
 										{
-											usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego.Juego, juego.DRM);
+											usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, juego.Juego, juego.DRM);
 
 											if (usuarioTieneDeseado == true)
 											{
@@ -509,7 +509,9 @@
 	public string idioma { get; set; }
 
 	[Parameter]
-	public Usuario usuario { get; set; }
+	public string usuarioId { get; set; }
+
+	private Usuario usuario = new Usuario();
 
 	[Parameter]
 	public int bundleId { get; set; }
@@ -521,8 +523,10 @@
 
 	private List<string> juegosUsuario = new List<string>();
 
-	protected override void OnInitialized()
-	{
+    protected override async Task OnInitializedAsync()
+    {
+        usuario = await UserManager.FindByIdAsync(usuarioId);
+
 		bundle = BaseDatos.Bundles.Buscar.UnBundle(bundleId);
 
 		if (bundle != null)
