--- a/pepeizqs deals web/Pages/Componentes/Secciones/Recompensas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Recompensas.razor
@@ -64,13 +64,17 @@
     public string idioma { get; set; }
 
     [Parameter]
-    public Usuario usuario { get; set; }
+    public string usuarioId { get; set; }
+
+    private Usuario usuario = new Usuario();
 
     private List<RecompensaJuego> juegosGestor = new List<RecompensaJuego>();
     private List<RecompensaJuego> juegosMostrar = new List<RecompensaJuego>();
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
+        usuario = await UserManager.FindByIdAsync(usuarioId);
+
         juegosGestor = BaseDatos.Recompensas.Juegos.Todo();
 
         if (juegosGestor != null)
