--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -42,7 +42,7 @@
                             {
                                 foreach (var juego in suscripcionActual.Juegos)
                                 {
-                                    bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
+                                    bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(juegosUsuario, juego.Juego, juego.DRM);
                                     bool usuarioTieneDeseado = false;
 
                                     string fondoColor = string.Empty;
@@ -53,7 +53,7 @@
                                     }
                                     else
                                     {
-                                        usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego.Juego, juego.DRM);
+                                        usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, juego.Juego, juego.DRM);
 
                                         if (usuarioTieneDeseado == true)
                                         {
@@ -234,7 +234,9 @@
     public string idioma { get; set; }
 
     [Parameter]
-    public Usuario usuario { get; set; }
+    public string usuarioId { get; set; }
+
+    private Usuario usuario = new Usuario();
 
     List<Juegos.JuegoSuscripcion> juegos = new List<Juegos.JuegoSuscripcion>();
 
@@ -246,8 +248,10 @@
     private List<string> años = new List<string>();
     private string añoSeleccionado = string.Empty;
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
+        usuario = await UserManager.FindByIdAsync(usuarioId);
+
         if (usuario != null)
         {
             if (string.IsNullOrEmpty(usuario.SteamGames) == false)
