--- a/pepeizqs deals web/Pages/Wishlist.cshtml
+++ b/pepeizqs deals web/Pages/Wishlist.cshtml
@@ -25,6 +25,6 @@
     @(await Html.RenderComponentAsync<Componentes.Secciones.Deseados>(RenderMode.Server, new
     {
         idioma = Model.idioma,
-        usuario = usuario
+        usuarioId = usuario?.Id
     }))
 }
